--- a/EnglishTutorAI/ClientApp/src/app/app.component.html
+++ b/EnglishTutorAI/ClientApp/src/app/app.component.html
@@ -1,3 +1,22 @@
-﻿<label>Enter your name:</label>
-<input [(ngModel)]="name" placeholder="name">
-<h1>You are welcome {{name}}!</h1>
+﻿<!-- <div class="container">
+    <div class="row">
+        <div class="col">
+          <app-menu></app-menu>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div> -->
+  <main>
+    <header class="row">
+      <div class="col">
+        <app-menu></app-menu>
+      </div>
+    </header>
+    <section class="content">
+      <app-home></app-home>
+    </section>
+  </main>
