--- a/EnglishTutorAI/ClientApp/src/menu/menu.component.html
+++ b/EnglishTutorAI/ClientApp/src/menu/menu.component.html
@@ -2,14 +2,18 @@
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active"
       [routerLinkActiveOptions]="{exact: true}">{{nameCompany}}</a>
-    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
+    <!-- <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="!isCollapsed" aria-controls="collapseNav">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
 
     <div class="collapse navbar-collapse" id="collapseNav" [collapse]="!isCollapsed" [isAnimated]="true">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item" *ngFor="let menuItem of menuItems">
+          <a class="nav-link" [routerLink]="[menuItem.route]" routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}">{{menuItem.name}}</a>
+        </li>
+        <!-- <li class="nav-item">
           <a class="nav-link" [routerLink]="['/dashboard']" routerLinkActive="active"
             [routerLinkActiveOptions]="{exact: true}">Dashboard</a>
         </li>
@@ -27,7 +31,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/profile']">My Profile</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
