All training - frontend

--- a/EnglishTutorAI/ClientApp/src/app/modules/user/components/aside-nav-panel/aside-nav-panel.component.html
+++ b/EnglishTutorAI/ClientApp/src/app/modules/user/components/aside-nav-panel/aside-nav-panel.component.html
@@ -1,22 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">{{title}}</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item" *ngFor="let menuItem of userMenuItems">
-            <a class="nav-link" aria-current="page" routerLink="{{menuItem.route}}" [ngClass]="{ active: menuItem.default }">{{menuItem.title}}</a>
+            <a class="nav-link" aria-current="page" routerLink="{{menuItem.route}}" [ngClass]="{ active: menuItem.default }">
+              {{menuItem.title}}</a>
           </li>
-
-          <!-- <li class="nav-item">
-            <a class="nav-link text-white" href="#">Link</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
         </ul>
         <div class="d-flex">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -36,26 +30,3 @@
       </div>
     </div>
   </nav>
-
-<!-- <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-    <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="javascript:void()" target="_blank">
-        <span class="ms-1 font-weight-bold">{{title}}</span>
-      </a>
-    </div>
-    <hr class="horizontal dark mt-0">
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
-      <ul class="navbar-nav">
-
-        <li class="nav-item" *ngFor="let menuItem of userMenuItems">
-            <a class="nav-link" [ngClass]="menuItem.default?'active':''" href="{{menuItem.route}}">
-              <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="fa text-sm opacity-10 text-primary" [ngClass]="[menuItem.icon, menuItem.color]"></i>
-              </div>
-              <span class="nav-link-text ms-1">{{menuItem.title}}</span>
-            </a>
-        </li>
-      </ul>
-    </div>
-  </aside> -->
