--- a/EnglishTutorAI/ClientApp/src/app/modules/user/components/dictionary-edit/dictionary-edit.component.html
+++ b/EnglishTutorAI/ClientApp/src/app/modules/user/components/dictionary-edit/dictionary-edit.component.html
@@ -1,4 +1,3 @@
-
 <div class="row">
     <form #newForm="ngForm" novalidate="novalidate">
         <div>
@@ -9,11 +8,11 @@
                 <input type="text" class="form-control" placeholder="Transcription" [(ngModel)]="currentDictionary.transcript" name="transcript">
             </div>
             <div class="mb-3">
-                <textarea class="form-control" placeholder="Translation of word or phrase" [(ngModel)]="currentDictionary.translatedText" name="translatedText"></textarea>
+                <textarea class="form-control" placeholder="Translation of word or phrase" [(ngModel)]="currentDictionary.translatedText" name="translatedText">
+                </textarea>
             </div>
             <div class="mb-3">
                 <textarea class="form-control" rows="4" placeholder="Examples" [(ngModel)]="currentDictionary.examples" name="examples"></textarea>
-
             </div>
         </div>
         <div class="control-panel-end">
@@ -23,5 +22,5 @@
             Saving...
           </button>
         </div>
-      </form>
+    </form>
 </div>
