--- a/EnglishTutorAI/ClientApp/src/app/modules/user/components/grammar/grammar.component.html
+++ b/EnglishTutorAI/ClientApp/src/app/modules/user/components/grammar/grammar.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="row">
     <div class="col-xl-5 p-xl-2 p-3">
         <div class="p-3 border bg-light rounded-3 full-height-content shadow-sm bg-body"> 
@@ -10,7 +8,8 @@
                 <div class="d-flex flex-row justify-content-end">
                     <div class="btn-group" [ngClass]="{ 'visually-hidden': isLoading || this.currentLangLevel == null }">
                         <label for="langLevelButton" class="p-2">Language level:</label>
-                        <button class="btn dropdown-toggle btn-primary-bg-subtle" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false" name="langLevelButton">
+                        <button class="btn dropdown-toggle btn-primary-bg-subtle" type="button" data-bs-toggle="dropdown"
+                                data-bs-auto-close="true" aria-expanded="false" name="langLevelButton">
                             <strong>{{currentLangLevel?.code}}</strong> - {{currentLangLevel?.name}}
                         </button>
                         <ul class="dropdown-menu">
